--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     networks:
       devops_training_net: #scalian_training:
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U root"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -52,6 +52,7 @@ networks:
 volumes:
 
   dbdata:
+
 
 
 
